--- a/sc/build.gradle
+++ b/sc/build.gradle
@@ -30,7 +30,7 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	// https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
 	implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.14.0'
-
+	compile('org.springframework.boot:spring-boot-starter-data-rest')
 }
 
 tasks.named('test') {
